# solana-trend-predictor

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README.md
docs/phases/: phase1.md
examples/: test_data_generator.py
src/: __init__.py  backtest.py  config.py  data_generator.py  indicators.py  model.py
tests/: test_backtest.py  test_model.py
